[package]
name = "flagup"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
console = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
