[package]
name = "libflagup"
version = "0.0.4"
edition = "2021"
description = "Display a country's flag as an emoji."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"