[package]
name = "libflagup"
version = "0.0.7"
edition = "2021"
description = "Display a country's flag as an emoji."
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
